--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "dependencies": {
     "nodemon": "^2.0.2",
     "cq-websocket": "^2.0.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "typescript": "^3.7.5",
     "typescript-eslint-parser": "^22.0.0",
     "json5": "^2.1.1",
     "@types/node": "^12.0.10",
+    "@types/axios": "^0.14.0",
     "@types/json5": "^0.0.30",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
