feat(add pcr-arena):

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "rootDir": "./src",
     "baseUrl": "",
     "target": "es6",
+    "lib": [
+      "es2019"
+    ],
     "allowJs": true,
     "noImplicitAny": true,
     "removeComments": true,
