--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsc -w -p tsconfig.json",
     "build": "tsc -p tsconfig.json",
-    "work": "nodemon dist"
+    "work": "nodemon dist",
+    "listen": "http-server dist"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,14 @@
     "nodemon": "^2.0.2",
     "cq-websocket": "^2.0.2",
     "request": "^2.88.0",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "form-data": "^3.0.0",
+    "image-to-base64": "^2.0.1",
+    "merge-images": "^1.1.0",
+    "canvas": "^2.6.1"
   },
   "devDependencies": {
+    "http-server": "^0.12.1",
     "typescript": "^3.7.5",
     "typescript-eslint-parser": "^22.0.0",
     "json5": "^2.1.1",
