--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ws-cqhttp",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "node-ws-cqhttp",
   "main": "index.js",
   "scripts": {
     "dev": "tsc -w -p tsconfig.json",
     "build": "tsc -p tsconfig.json",
     "work": "nodemon dist",
+    "clean": "rm -rf ./dist",
     "listen": "http-server dist"
   },
   "repository": {
