feat: 1. 添加正则表达式和文字包含回复以及占位符回复。2.若无法发送setu则返回pid。3.采用ts-node

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "outDir": "./dist/",
     "rootDir": "./src",
-    "baseUrl": "",
     "target": "es6",
     "lib": [
       "es2019"
@@ -19,7 +18,11 @@
     "typeRoots": [
       "typings",
       "node_modules/@types"
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@utils": ["./src/utils"]
+    }
   },
   "include": [
     "./src",
