--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ws-cqhttp",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "node-ws-cqhttp",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -w -p tsconfig.json",
-    "build": "tsc -p tsconfig.json",
-    "work": "nodemon dist",
     "clean": "rm -rf ./dist",
-    "listen": "http-server dist"
+    "listen": "http-server dist",
+    "server": "ts-node --project ./tsconfig.json -r tsconfig-paths/register ./src/index.ts",
+    "dev": "ts-node-dev --project ./tsconfig.json -r tsconfig-paths/register ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -40,7 +39,10 @@
     "rd": "^2.0.1",
     "fse": "^4.0.1",
     "chalk": "^3.0.0",
-    "mkdirp": "^1.0.3"
+    "mkdirp": "^1.0.3",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "bugs": {
     "url": "https://github.com/SalterYu/node-ws-cqhttp/issues"
