--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ws-cqhttp",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "node-ws-cqhttp",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,8 @@
     "form-data": "^3.0.0",
     "image-to-base64": "^2.0.1",
     "merge-images": "^1.1.0",
-    "canvas": "^2.6.1"
+    "canvas": "^2.6.1",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {
     "http-server": "^0.12.1",
@@ -39,6 +40,7 @@
     "rd": "^2.0.1",
     "fse": "^4.0.1",
     "chalk": "^3.0.0",
+    "webp-converter": "^2.2.3",
     "mkdirp": "^1.0.3",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
