--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ws-cqhttp",
-  "version": "1.1.6",
+  "name": "kasumi-bot",
+  "version": "1.1.7",
   "description": "node-ws-cqhttp",
   "main": "index.js",
   "scripts": {
