--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "image-to-base64": "^2.0.1",
     "merge-images": "^1.1.0",
     "canvas": "^2.6.1",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "iconv-lite": "^0.5.1"
   },
   "devDependencies": {
     "http-server": "^0.12.1",
