--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "merge-images": "^1.1.0",
     "canvas": "^2.6.1",
     "node-schedule": "^1.3.2",
-    "iconv-lite": "^0.5.1"
+    "iconv-lite": "^0.5.1",
+    "msgpack-lite": "^0.1.26"
   },
   "devDependencies": {
     "http-server": "^0.12.1",
